2004-05-04  James Turner  <james@worldforge.org>

	* Atlas/Net/Stream.cpp: make negotiation state transitions
	  explicit, rather than using ++.
	  
	* Add X-code project
	
	* Fixup a missing include in objectFactory that breaks Mac

2004-05-01  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Objects/GenerateObjectFactory.py: Tolerate old objtype
	  from the other end.

2004-04-24  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Message/DecoderBase.cpp: Eliminate a second deep copy
	  before calling messageArrived() with a complete message.

2004-03-08  Al Riddoch  <alriddoch@zepler.org>

	* tests/Objects/objects2.cpp: Fix use of std namespace.

	* benchmark/Objects3_Move.cpp: Fix use of std::cout instead
	  of std::endl.

	* benchmark/Objects3_Move.cpp, tests/Objects/decoder1.cpp,
	  tests/Objects/encoder1.cpp, tests/Objects/objects1.cpp,
	  tests/Objects/objects2.cpp: Don't bail out if xml file
	  can't be loaded, as defaults are now already set.

	* benchmark/timer.h: Ensure this file is included in the
	  distribution.

	* Atlas/Version.h: Add new header with API version as defines
	  and static variables.

2004-02-27  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Objects/gen_cpp.py, Atlas/Objects/AttributeInfo.py:
	  Complete work to set default values for objects at build
	  time. It is no longer necessary to load atlas.xml into
	  applications.

2004-02-27  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Objects/gen_cpp.py:
	  Work in progress to set default values for objects at build
	  time.

2004-02-26  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Objects/AttributeInfo.py: Add some debugging output to
	  the default initialiser generation code.

	* Atlas/Message/Element.h: Add a flag allowing us to make typedefs
	  private already for apps that want it already.

	* Atlas/Objects/BaseObject.h: Fix a comment.

	* Atlas/Objects/SmartPtr.h: Add typedefs for iterator and
	  const_iterator, and replace operator! with a explicit