@@ -6,7 +6,6 @@
 #define ATLAS_OBJECTS_OBJECTFACTORY_H
 
 #include <Atlas/Objects/Root.h>
-#include <Atlas/Exception.h>
 
 #include <string>
 #include <list>
