@@ -1,3 +1,10 @@
+2004-05-07  Al Riddoch  <alriddoch@zepler.org>
+
+	* Atlas/Objects/objectFactory.h: Remove redundant include.
+
+	* Atlas/Objects/AttributeInfo.py: Implement recursive
+	  Objects level encoding of operation args.
+
 2004-05-04  James Turner  <james@worldforge.org>
 
 	* Atlas/Net/Stream.cpp: make negotiation state transitions
